chore: Refactor for better swagger doc
